src/test/deca/context/valid/provided/ContextSansObjet/MultiplyIntFloat.deca
//Description :
//	Vérification contextuelle de l'opérateur * avec des variables int et float
//
//Résultats :
//	ok

{
    float x = 1;
    float y = x * 3.6;
    float z = 1 * 3.6;
}