src/test/deca/context/invalid/provided/ContextSansObjet/OperationsArithmetiques/MultiplyFloatFloat_Int.deca
//Description :
//	Vérification contextuelle du type de sortie de * avec pour entrée <float, float>
//
//Résultats :
//  Erreur contextuelle
//	ligne 9 : type incompatible

{
    int x = 1.2*3.0;
}